# stop-the-fire

./: .gitignore  IE492_Final_Report.docx  IE492_Final_Report.md  IE492_Final_Report.tex  ie 492 problem definition.docx
figures/: _capture_screenshots.py  _make_plots.py  _make_schematics.py
final suite/: .dockerignore  .gitignore  ALGORITHMS.md  Dockerfile  README.md  SUNUM.md  fly.toml  huggingface-space-README.md  netlify.toml  run.sh
final suite/backend/: benchmark_synthetic.py  firefighter_engine.py  (+6 more)
initial explorations/: 24032026.md  STRATEGIES.md  pyproject.toml  test.py
initial explorations/docs/: product_notes.md
initial explorations/scripts/: generate_context_diagram.py  run_calibration.py  run_full_comparison.py  run_hexagon_baseline.py  run_planar_baseline.py  visualize.py
initial explorations/stop_the_fire/: demo_n30_strategies.py
initial explorations/stop_the_fire/calibration/: runner.py  vertex_selection.py
initial explorations/stop_the_fire/calibration/results/: max_degree_d0.2.csv  max_degree_d0.3.csv  max_degree_hex_n30_40_50.csv  max_degree_planar_n30_40_50.csv  vertex_selection_raw.csv  vertex_selection_scores.csv
initial explorations/stop_the_fire/calibration/results/final/: full_comparison.csv
initial explorations/stop_the_fire/engine/: __init__.py  fire_engine.py  frontier.py  graph_gen.py  models.py
initial explorations/stop_the_fire/engine/strategies/: __init__.py  base.py  max_degree.py  max_white_neighbors.py  min_cut_edge.py  min_cut_vertex.py  min_degree.py  random_front.py
review_packets/: README.md  _make_packets.py
(+21 files in other folders)
