[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "stop-the-fire"
version = "0.1.0"
dependencies = [
    "networkx",
    "matplotlib",
    "pandas",
    "numpy",
]
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["."]
include = ["stop_the_fire*"]
